test/writeup/2/empty.iot
{
  'interpreter': 'writeup',
  'err_val': 'destination path cannot be empty string.\n',
  'links': 'test',
}
